# public/docs/openapi.yaml
@@ -85,6 +85,8 @@ paths:
                     name: 'John Doe'
                     email: john@yopmail.com
                     email_verified_at: null
+                    phone: '1234567890'
+                    image: 'Affiliate Marketer/1710396979_29689_c7ca91b4-b2eb-42b3-a317-58d00bb96190.png'
                     created_at: '2021-05-27T06:50:50.000000Z'
                     updated_at: '2021-05-27T06:50:50.000000Z'
                 properties:
@@ -103,6 +105,12 @@ paths:
                       email_verified_at:
                         type: string
                         example: null
+                      phone:
+                        type: string
+                        example: '1234567890'
+                      image:
+                        type: string
+                        example: 'Affiliate Marketer/1710396979_29689_c7ca91b4-b2eb-42b3-a317-58d00bb96190.png'
                       created_at:
                         type: string
                         example: '2021-05-27T06:50:50.000000Z'
@@ -203,20 +211,10 @@ paths:
                   type: string
                   description: 'The email of the user.'
                   example: whiteglovecomics@gmail.com
-                address:
-                  type: string
-                  description: 'The address of the user.'
-                  example: 'USA,678'
-                pincode:
-                  type: string
-                  description: 'The pincode of the user.'
-                  example: '659865'
               required:
                 - name
                 - phone
                 - email
-                - address
-                - pincode
   /api/v1/affiliater/create-link:
     post:
       summary: 'AffiliateLink Api'
@@ -246,6 +244,55 @@ paths:
                     example: true
       tags:
         - 'Affiliater Profile'
+  /api/v1/affiliater/dashboard:
+    post:
+      summary: 'Dashboard Api'
+      operationId: dashboardApi
+      description: ''
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success:
+                    total_commissions: 1
+                    total_commision_amount: 100
+                    commision_amount_this_month: 100
+                    commision_amount_this_week: 100
+                properties:
+                  success:
+                    type: object
+                    properties:
+                      total_commissions:
+                        type: integer
+                        example: 1
+                      total_commision_amount:
+                        type: integer
+                        example: 100
+                      commision_amount_this_month:
+                        type: integer
+                        example: 100
+                      commision_amount_this_week:
+                        type: integer
+                        example: 100
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  error: Unauthorised
+                properties:
+                  error:
+                    type: string
+                    example: Unauthorised
+      tags:
+        - 'Affiliater dashboard'
   /api/v1/login:
     post:
       summary: 'Login Api'
@@ -447,11 +494,11 @@ paths:
                 phone:
                   type: string
                   description: 'Must match the regex /^([0-9\s\-\+\(\)]*)$/. Must be at least 10 characters.'
-                  example: ylllzddijxd
+                  example: qpsdsowxswglwkdixxjaojqrplqzridskkvvcouuymahijntbzw
                 email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: reagan.skiles@example.net
+                  example: bquigley@example.org
                 password:
                   type: string
                   description: 'The password of the user.'
@@ -856,7 +903,7 @@ paths:
                 type:
                   type: string
                   description: ''
-                  example: et
+                  example: voluptatem
               required:
                 - type
       security: []
@@ -933,19 +980,19 @@ paths:
                 coupon_code:
                   type: string
                   description: ''
-                  example: enim
+                  example: dolores
                 plan_id:
                   type: string
                   description: ''
-                  example: consectetur
+                  example: consequuntur
                 plan_price:
                   type: string
                   description: ''
-                  example: sed
+                  example: aut
                 email:
                   type: string
                   description: 'This field is required when <code>phone</code> is not present.  Must be a valid email address.'
-                  example: robert28@example.net
+                  example: goodwin.kendrick@example.org
                 phone:
                   type: string
                   description: 'This field is required when <code>email</code> is not present.'
@@ -1064,11 +1111,11 @@ paths:
                 phone:
                   type: string
                   description: 'Must match the regex /^([0-9\s\-\+\(\)]*)$/. Must be at least 10 characters.'
-                  example: zjtyxemaaoypmtvifbbezrgwfeockttakjsnuhdszwzuusugrpsqs
+                  example: vrjkbgzjjkgafzqcuqmsilgodhajhemtugrctihumkgdiyvbrixvkeutqwgadnyhtljhht
                 email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: hagenes.maud@example.com
+                  example: gbeatty@example.net
                 password:
                   type: string
                   description: 'The password of the user.'
@@ -1354,7 +1401,7 @@ paths:
                 user_email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: lera03@example.net
+                  example: cummerata.davin@example.com
                 user_phone:
                   type: string
                   description: 'The phone of the user.'
@@ -1416,7 +1463,7 @@ paths:
                 email:
                   type: string
                   description: 'The email of the user. Example:'
-                  example: wmedhurst@example.com
+                  example: carole.schaefer@example.com
               required:
                 - email
       security: []
@@ -1483,47 +1530,47 @@ paths:
                 first_name:
                   type: string
                   description: ''
-                  example: eum
+                  example: consequuntur
                 last_name:
                   type: string
                   description: ''
-                  example: sed
+                  example: error
                 country:
                   type: string
                   description: ''
-                  example: dolore
+                  example: quod
                 house_name:
                   type: string
                   description: ''
-                  example: ut
+                  example: rerum
                 detail_address:
                   type: string
                   description: ''
-                  example: accusantium
+                  example: doloremque
                 city:
                   type: string
                   description: ''
-                  example: eius
+                  example: et
                 state:
                   type: string
                   description: ''
-                  example: nam
+                  example: doloremque
                 post_code:
                   type: string
                   description: ''
-                  example: eum
+                  example: totam
                 phone:
                   type: string
                   description: ''
-                  example: nemo
+                  example: unde
                 amount:
                   type: string
                   description: ''
-                  example: nam
+                  example: consequuntur
                 paymentID:
                   type: string
                   description: ''
-                  example: est
+                  example: impedit
               required:
                 - emailId
                 - first_name
@@ -1838,6 +1885,9 @@ tags:
     description: ''
   -
     name: 'Affiliater Profile'
+    description: ''
+  -
+    name: 'Affiliater dashboard'
     description: ''
   -
     name: Authentication
